manifest/unpackaged/objects/Quote.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__RecurringTotal2__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Sum of recurring time totals of quotes for which this quote is a parent quote.</description>
        <label>Parent Quote Recurring Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringTotal__c</fullName>
        <label>Recurring Total</label>
        <summarizedField>QuoteLineItem.vlocity_cmt__RecurringTotal__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RenewalSourceContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewal Source Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Renewal Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ShippingPostalCode__c</fullName>
        <formula>ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ShippingState__c</fullName>
        <formula>ShippingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SyncedOrderId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Synced Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Existing Customer - Upgrade</fullName>
                </value>
                <value>
                    <fullName>Existing Customer - Replacement</fullName>
                </value>
                <value>
                    <fullName>Existing Customer - Downgrade</fullName>
                </value>
                <value>
                    <fullName>New Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UsageMarginTotal__c</fullName>
        <description>Usage Margin Total</description>
        <label>Usage Margin Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ValidationDate__c</fullName>
        <description>Date of last validation run</description>
        <inlineHelpText>Date of last validation run</inlineHelpText>
        <label>Validation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ValidationMessage__c</fullName>
        <description>Message from the last validation run</description>
        <inlineHelpText>Message from the last validation run</inlineHelpText>
        <label>Validation Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ValidationStatus__c</fullName>
        <description>Status of the validation</description>
        <inlineHelpText>The result status of the last validation run</inlineHelpText>
        <label>Validation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not yet run</fullName>
                    <default>true</default>
                    <label>Not yet run</label>
                </value>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>Test</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>QUOTE.ISSYNCING</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OVA_calcule__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Capex__c</field>
            <operation>lessOrEqual</operation>
            <value>12</value>
        </filters>
        <label>Test</label>
    </listViews>
    <listViews>
        <fullName>mine</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.ISSYNCING</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <filterScope>Mine</filterScope>
        <label>My Quotes</label>
    </listViews>
    <listViews>
        <fullName>mine</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.ISSYNCING</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <filterScope>Mine</filterScope>
        <label>My Quotes</label>
    </listViews>
    <recordTypes>
        <fullName>Data</fullName>
        <active>true</active>
        <label>Fixe et connectivité critique</label>
    </recordTypes>
    <recordTypes>
        <fullName>Data_Complex</fullName>
        <active>true</active>
        <description>This Record type is for Data Quote Complex</description>
        <label>Fixe et connectivité critique Complex</label>
    </recordTypes>
    <recordTypes>
        <fullName>Data_Complex_Quote_Read_only</fullName>
        <active>true</active>
        <label>Fixe et connectivité critique Complex Quote Read only</label>
    </recordTypes>
    <recordTypes>
        <fullName>Data_Quote_Read_only</fullName>
        <active>true</active>
        <label>Fixe et connectivité critique Quote Read only</label>
    </recordTypes>
    <recordTypes>
        <fullName>ICT_Cloud_Datacenter</fullName>
        <active>true</active>
        <description>This Record type is for ICT Offer Simple Process</description>
        <label>Cloud &amp; Datacenter</label>
    </recordTypes>
    <recordTypes>
        <fullName>ICT_Cloud_Datacenter_Complex</fullName>
        <active>false</active>
        <description>This Record type is for ICT Offer Complex Process</description>
        <label>Cloud &amp; Datacenter Complex</label>
    </recordTypes>
    <recordTypes>
        <fullName>ICT_Cloud_Datacenter_Complex_Quote_Read_only</fullName>
        <active>true</active>
        <label>Cloud &amp; Datacenter Complex Quote Read only</label>
    </recordTypes>
    <recordTypes>
        <fullName>ICT_Cloud_Datacenter_Quote_Read_only</fullName>
        <active>true</active>
        <label>Cloud &amp; Datacenter Quote Read only</label>
    </recordTypes>
    <recordTypes>
        <fullName>ICT_Cybersecurity</fullName>
        <active>true</active>
        <label>Cybersécurité</label>
    </recordTypes>
    <recordTypes>
        <fullName>ICT_Cybersecurity_Complex</fullName>
        <active>true</active>
        <label>Cybersécurité Complex</label>
    </recordTypes>
    <recordTypes>
        <fullName>ICT_Cybersecurity_Complex_Quote_Read_Only</fullName>
        <active>true</active>
        <label>Cybersécurité Complex Quote Read Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>ICT_Cybersecurity_Quote_Read_Only</fullName>
        <active>true</active>
        <label>Cybersécurité	Quote Read Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mobile</fullName>
        <active>true</active>
        <label>Mobilité &amp; IoT</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mobile_Complex_Quote_Read_Only</fullName>
        <active>true</active>
        <label>Mobilité &amp; IoT Complex Quote Read Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mobile_Quote_Read_Only</fullName>
        <active>true</active>
        <label>Mobilité &amp; IoT Quote Read Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mobile_With_Approval</fullName>
        <active>true</active>
        <label>Mobilité &amp; IoT With Approval</label>
    </recordTypes>
    <recordTypes>
        <fullName>Multiproduct</fullName>
        <active>true</active>
        <label>Multiproduit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Multiproduct_Quote_Read_Only</fullName>
        <active>true</active>
        <label>Multiproduit Quote Read Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quote_Complex</fullName>
        <active>true</active>
        <label>Quote Complex</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quote_Read_Only</fullName>
        <active>true</active>
        <label>Quote Read Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__GroupCart</fullName>
        <active>true</active>
        <description>Group Cart record</description>
        <label>Group Cart</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__MasterQuote</fullName>
        <active>true</active>
        <description>Master Quote record</description>
        <label>Master Quote</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__SubQuote</fullName>
        <active>true</active>
        <description>Sub Quote record</description>
        <label>Sub Quote</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Check_Opportunity_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Opportunity.CloseDate&lt;Today()</errorConditionFormula>
        <errorMessage>Impossible de modifier le devis, l&apos;opportunité est expirée</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DataComplex_Status_Prise_en_compte</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( Status , &apos;Prise en compte&apos;),RecordType.DeveloperName = &apos;Data_Complex&apos;, Assign__c  = &apos;OSM Technique&apos;,

OR($Profile.Name  &lt;&gt; &apos;OSM Technique Profile&apos;,AND(Etude_technique_termin_e__c = false,$Profile.Name  =  &apos;OSM Technique Profile&apos;)))</errorConditionFormula>
        <errorMessage>Le changement du Status de devis vers &quot;Prise en compte&quot; n&apos;est possible que pour le Team &quot;OSM&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RequiredProfitabiltyFields</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Profile.Name == &apos;Pricing OSM Profile&apos;,
ISPICKVAL( Status , &apos;Prise en compte&apos;), 
ISCHANGED(Status),
NOT(ISPICKVAL(PRIORVALUE(Status),&quot;Prise en compte&quot;)),
OR(
ISNULL(EBITDA_margin__c) ,
ISNULL(Subvention__c) ,
ISNULL(Remise_Moyenne__c) 
))</errorConditionFormula>
        <errorMessage>Merci de remplir les champs ( EBITDA margin,Subvention,Remise Moyenne)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_Assigne_RecordOwner_Readonly</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( Status , &apos;Assigné&apos;),( $User.Id  =  OwnerId ),(  Assign__c  &lt;&gt; null ),  OR ((RecordType.DeveloperName = &apos;Mobile_Complex&apos;) , (RecordType.DeveloperName = &apos;Multiproduct&apos;) , (RecordType.DeveloperName = &apos;Data_Complex&apos;),(RecordType.DeveloperName = &apos;ICT_Cloud_Datacenter_Complex&apos;),
(RecordType.DeveloperName  = &apos;ICT_Cybersecurity_Complex&apos;)),NOT(($Profile.Name = &apos;System Administrator&apos;)),( AssignedTime__c &gt; 4),( NOW()  &gt;  AssigneTime__c ))</errorConditionFormula>
        <errorMessage>Si le commercial changes le status du devis vers &quot;Assigné&quot;, le devis n&apos;est plus modifiable par le commercial</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_Prise_en_compte_only_Pricing_OSM</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  ISCHANGED(Status) ,ISPICKVAL( Status , &apos;Prise en compte&apos;),
OR((RecordType.DeveloperName  = &apos;Mobile_Complex&apos;),
(RecordType.DeveloperName = &apos;Multiproduct&apos;),
(RecordType.DeveloperName = &apos;ICT_Cloud_Datacenter_Complex&apos;),
(RecordType.DeveloperName  = &apos;ICT_Cybersecurity_Complex&apos;)),
NOT(  
 OR(($Profile.Name = &apos;Pricing OSM Profile&apos;),($Profile.Name = &apos;System Administrator&apos;))  
)
)
||
(AND(ISPICKVAL( Status , &apos;Prise en compte&apos;),RecordType.DeveloperName = &apos;Data_Complex&apos;, Assign__c  = &apos;Pricing OSM&apos;,

OR($Profile.Name  &lt;&gt; &apos;Pricing OSM Profile&apos;,AND(Etude_technique_termin_e__c = false,$Profile.Name  =  &apos;Pricing OSM Profile&apos;))))</errorConditionFormula>
        <errorMessage>Le changement du Status de devis vers &quot;Prise en compte&quot; n&apos;est possible que pour le Team &quot;Pricing OSM&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Cancel_Quote</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
OR(
ISPICKVAL(PRIORVALUE( Status ), &quot;BC signé&quot;),
ISPICKVAL(PRIORVALUE( Status ), &quot;Rejeté client&quot;),
ISPICKVAL(PRIORVALUE( Status ), &quot;Validé en interne&quot;)), 
ISPICKVAL( Status, &apos;Annulé&apos;))</errorConditionFormula>
        <errorMessage>Vous ne pouvez pas annuler ce devis</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Clone_Rejected_Quote</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISCHANGED(Status),
ISPICKVAL(PRIORVALUE(Status), &quot;Rejeté client&quot;)
)</errorConditionFormula>
        <errorMessage>Merci de cloner le Devis</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Lock_Passage10</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISCHANGED(Status), 
ISPICKVAL(PRIORVALUE(Status), &quot;Prise en compte&quot;),
NOT(OR(
AND(ISPICKVAL(Status, &quot;En attente d&apos;approbation&quot;),
OR(Niveau_de_validation__c   =&quot;2&quot;,
Niveau_de_validation__c   =&quot;3&quot;,
Niveau_de_validation__c   =&quot;4&quot; )),
ISPICKVAL(Status, &quot;Envoyé au client&quot;),
ISPICKVAL(Status, &quot;Annulé&quot;),
ISPICKVAL(Status, &quot;Assigné&quot;),
AND(ISPICKVAL(Status, &quot;Approbation acceptée&quot;), Niveau_de_validation__c   =  &quot;1&quot;)
)
)
)</errorConditionFormula>
        <errorMessage>Impossible de changer le status du Devis</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Lock_Passage11</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
ISCHANGED(Status), 
ISPICKVAL(PRIORVALUE(Status), &quot;Assigné&quot;),
NOT(ISPICKVAL(Status, &quot;Prise en compte&quot;)
))</errorConditionFormula>
        <errorMessage>Impossible de changer le status du Devis</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Lock_Passage9</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISCHANGED(Status), 
ISPICKVAL(PRIORVALUE(Status), &quot;Prise en compte&quot;),
NOT(OR(
AND(ISPICKVAL(Status, &quot;En attente d&apos;approbation&quot;),
OR(Niveau_de_validation__c   =&quot;2&quot;,
Niveau_de_validation__c   =&quot;3&quot;,
Niveau_de_validation__c   =&quot;4&quot; )),
ISPICKVAL(Status, &quot;Envoyé au client&quot;),
ISPICKVAL(Status, &quot;Annulé&quot;),
ISPICKVAL(Status, &quot;Assigné&quot;),
AND(ISPICKVAL(Status, &quot;Approbation acceptée&quot;), Niveau_de_validation__c   =  &quot;1&quot;)
)
)
)</errorConditionFormula>
        <errorMessage>Impossible de changer le status du Devis</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Lock_PassageTo_Envoye_Client</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
Niveau_de_validation__c  &lt;&gt; Null,
Approbation_accepte__c = false, 
ISPICKVAL( Status, &apos;Envoyé au client&apos;) 
)</errorConditionFormula>
        <errorMessage>La demande d&apos;une approbation est nécessaire pour ce devis.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Lock_Passage_AcceptedClient</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED(Status), 
ISPICKVAL(PRIORVALUE(Status), &quot;Accepté client&quot;),
NOT(OR(ISPICKVAL(Status, &quot;BC signé&quot;),
ISPICKVAL(Status, &quot;Annulé&quot;)
)
)
)</errorConditionFormula>
        <errorMessage>Impossible de changer le status du Devis</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Lock_Passage_Approbation_acceptee</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED(Status), 
ISPICKVAL(PRIORVALUE(Status), &quot;Approbation acceptée&quot;),
NOT(OR(ISPICKVAL(Status, &quot;Envoyé au client&quot;),
ISPICKVAL(Status, &quot;En cours&quot;),
ISPICKVAL(Status, &quot;Annulé&quot;)
)
)
)</errorConditionFormula>
        <errorMessage>Impossible de changer le status du Devis</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Lock_Passage_Approbation_refusee</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED(Status), 
ISPICKVAL(PRIORVALUE(Status), &quot;Approbation refusée&quot;),
NOT(OR(ISPICKVAL(Status, &quot;En cours&quot;),
ISPICKVAL(Status, &quot;Annulé&quot;),
ISPICKVAL(Status, &quot;Envoyé au client&quot;)
)
)
)</errorConditionFormula>
        <errorMessage>Impossible de changer le status du Devis</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Lock_Passage_Assigned</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED(Status), 
ISPICKVAL(PRIORVALUE(Status), &quot;Assigné&quot;),
NOT(OR(
AND(ISPICKVAL(Status, &quot;Prise en compte&quot;), 
Assign__c=&quot;Avant Vente&quot; ),
AND(ISPICKVAL(Status, &quot;Prise en compte&quot;), 
Assign__c!=&quot;Avant Vente&quot; ,OR(raccordement_study_completed__c =true, Technical_study_completed__c=true)) 
)
)
				
)</errorConditionFormula>
        <errorMessage>Impossible de changer le status du Devis</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Lock_Passage_En_cours</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED(Status), 
ISPICKVAL(PRIORVALUE(Status), &quot;En cours&quot;),
NOT(OR(
AND(ISPICKVAL(Status, &quot;En attente d&apos;approbation&quot;),ApprovalSubmited__c = NULL),
ISPICKVAL(Status, &quot;Annulé&quot;),
AND(ISPICKVAL(Status, &quot;Approbation acceptée&quot;), 
Niveau_de_validation__c &lt;&gt; NULL,Remise_Moyenne__c=0)
)
)
)</errorConditionFormula>
        <errorMessage>Impossible de changer le status du Devis</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Lock_Passage_Envoye_au_Client</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED(Status), 
ISPICKVAL(PRIORVALUE(Status), &quot;Envoyé au client&quot;),
NOT(OR(ISPICKVAL(Status, &quot;Accepté client&quot;),
ISPICKVAL(Status, &quot;Rejeté client&quot;),
ISPICKVAL(Status, &quot;Annulé&quot;)
)
)
)</errorConditionFormula>
        <errorMessage>Impossible de changer le status du Devis</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Lock_Passage_FinalStatus</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISCHANGED(Status), 
OR(ISPICKVAL(PRIORVALUE(Status), &quot;BC signé&quot;),
ISPICKVAL(PRIORVALUE(Status), &quot;Annulé&quot;)
)
)</errorConditionFormula>
        <errorMessage>Impossible de changer le status du Devis</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Lock_Passage_Nouveau</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED(Status), 
ISPICKVAL(PRIORVALUE(Status), &quot;Nouveau&quot;),
NOT(OR(ISPICKVAL(Status, &quot;Annulé&quot;),
AND(ISPICKVAL(Status, &quot;En cours&quot;),
QuoteLineItemListSize__c &lt;&gt; 0)
)
)
)</errorConditionFormula>
        <errorMessage>Impossible de changer le status du Devis</errorMessage>
    </validationRules>
</CustomObject>